# ander

./: .gitignore  README.md  pyproject.toml
ander/: cli.py
tests/: test_ander.py
tests/data/: file1.txt  file1_right.txt  file2.txt  file3.txt
