[tool.poetry]
name = "ander"
version = "0.1.0"
description = ""
authors = ["Josuke Yamane <josuke_yamane@mail.toyota.co.jp>"]
packages = [
  { include = "ander" }
]

[tool.poetry.dependencies]
python = ">=3.6, <4"
fire = "*"

[tool.poetry.scripts]
ander = "ander.cli:main"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.10.1", extras = ["lint"]}

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy =true
mypy_preset = "strict"
line_length = 88
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
  paths = ["./ander"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
